--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,54 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{
+  font-family: 'Poppins', sans-serif;
+}
+
+.homeImage{
+    max-width: 100%;
+    max-height: 50%;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    margin-top: 2rem;
+    overflow: auto;
+    /* position: fixed; */
+    right: 0;
+    top: 0;
+    -o-object-fit: contain;
+    object-fit: contain;
+}
+
+/* .container {
+  position: relative;
+  text-align: center;
+  color: white;
+} */
+
+.centered {
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.cards{
+  margin-left: 10rem;
+  margin-right: 10rem
+}
+
+
+/* @media (min-width: 700px) {
+  .card {
+    display: flex;
+  }
+} */
+
+@media (max-width: 820px) {
+
+  .centered { display: none;}
+  }
