--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,8 @@ button{
   background-color: #454141;
   color: white;
 }
+.center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
