--- a/src/index.css
+++ b/src/index.css
@@ -2,25 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-*{
-  font-family: 'Poppins', sans-serif;
+* {
+  font-family: "Poppins", sans-serif;
 }
 
-.homeImage{
-    max-width: 100%;
-    max-height: 50%;
-    bottom: 0;
-    left: 0;
-    margin: auto;
-    margin-top: 2rem;
-    overflow: auto;
-    /* position: fixed; */
-    right: 0;
-    top: 0;
-    -o-object-fit: contain;
-    object-fit: contain;
+.homeImage {
+  max-width: 100%;
+  max-height: 50%;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  margin-top: 2rem;
+  overflow: auto;
+  /* position: fixed; */
+  right: 0;
+  top: 0;
+  -o-object-fit: contain;
+  object-fit: contain;
 }
 
 /* .container {
@@ -36,11 +36,34 @@
   transform: translate(-50%, -50%);
 }
 
-.cards{
+.cards {
   margin-left: 10rem;
-  margin-right: 10rem
+  margin-right: 10rem;
 }
 
+.switchingComponent {
+  margin: auto;
+  width: 80%;
+  /* border: 5px solid #ffbf00; */
+  /* border-radius: 20px; */
+  padding: 10px;
+  height: 60vh;
+  padding: 2rem;
+  margin-bottom: 1rem;
+}
+
+.progressbar {
+  width: 100%;
+  height: 10px;
+  background-color: white;
+  margin-bottom: 50px;
+}
+
+.progressbar div {
+  width: 80%;
+  height: 100%;
+  background-color: #ffbf00;
+}
 
 /* @media (min-width: 700px) {
   .card {
@@ -48,7 +71,8 @@
   }
 } */
 
-@media (max-width: 820px) {
-
-  .centered { display: none;}
+@media (max-width: 720px) {
+  .centered {
+    display: none;
   }
+}
