--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   font-family: "Poppins", sans-serif;
 }
 
-.homeImage {
+/* .homeImage {
   max-width: 100%;
   max-height: 50%;
   bottom: 0;
@@ -16,12 +16,12 @@
   margin: auto;
   margin-top: 2rem;
   overflow: auto;
-  /* position: fixed; */
+  position: fixed;
   right: 0;
   top: 0;
   -o-object-fit: contain;
   object-fit: contain;
-}
+} */
 
 /* .container {
   position: relative;
@@ -37,13 +37,15 @@
 }
 
 .cards {
-  margin-left: 10rem;
-  margin-right: 10rem;
+  /* margin-left: 10rem;
+  margin-right: 10rem; */
+  width: 80%;
+  margin: auto;
 }
 
 .switchingComponent {
   margin: auto;
-  width: 80%;
+  /* width: 80%; */
   /* border: 5px solid #ffbf00; */
   /* border-radius: 20px; */
   padding: 10px;
@@ -65,14 +67,24 @@
   background-color: #ffbf00;
 }
 
+.switch-body{
+  margin: 0 auto;
+}
+
 /* @media (min-width: 700px) {
   .card {
     display: flex;
   }
 } */
 
-@media (max-width: 720px) {
+@media (max-width: 1050px) {
   .centered {
     display: none;
+  }
+}
+
+@media (orientation: portrait) {
+  .switchingComponent {
+    height: 100vh;
   }
 }
