Add flexwrap to cards component, add styles to sign up, sign in

--- a/src/index.css
+++ b/src/index.css
@@ -11,23 +11,13 @@
 
 .centered {
   position: absolute;
-  top: 70%;
+  top: 80%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
-.cards {
-  /* margin-left: 10rem;
-  margin-right: 10rem; */
-  width: 80%;
-  margin: auto;
-}
-
 .switchingComponent {
   margin: auto;
-  /* width: 80%; */
-  /* border: 5px solid #ffbf00; */
-  /* border-radius: 20px; */
   padding: 10px;
   height: 60vh;
   padding: 2rem;
@@ -47,11 +37,17 @@
   background-color: #ffbf00;
 }
 
-.switch-body{
+/* .switch-body{
   margin: 0 auto;
+} */
+
+
+
+.signin, .signup{
+  height: 100vh;
 }
 
-@media (max-width: 1050px) {
+@media (max-width: 1370px) {
   .centered {
     display: none;
   }
@@ -59,6 +55,19 @@
 
 @media (orientation: portrait) {
   .switchingComponent {
-    height: 100vh;
+    height: 80vh;
+    /* width: 90%; */
+  }
+}
+
+/* @media (max-width: 530px){
+  .cards {
+    margin: 0 auto;
+  }
+} */
+
+@media (orientation: portrait) {
+  .sign-in, .sign-up {
+    width: 90%;
   }
 }
