--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,5 @@
  }
 
 .hero {
-    background-image: url('./components/Assets');
+    background-image: url('./components/Assets/pascal-meier-HfYk04kY0ZQ-unsplash.jpg');
 }
