--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
   background-color: #2C3333;
   margin: auto;
   padding: 10px;
-  height: 60vh;
+  height: 70vh;
   padding: 2rem;
   margin-bottom: 1rem;
   color: white;
@@ -59,6 +59,12 @@
 
 @media (orientation: portrait) {
   .sign-in, .sign-up {
-    width: 90%;
+    width: 50%;
+  }
+}
+
+@media (orientation: portrait) {
+  .map-form {
+    width: 70%;
   }
 }
