Add styles tp start component and add routes

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
@@ -16,8 +15,8 @@
   transform: translate(-50%, -50%);
 }
 
-.Switch{
-  background-color: #2C3333;
+.Switch {
+  background-color: #2c3333;
   margin: auto;
   padding: 10px;
   height: 70vh;
@@ -39,10 +38,11 @@
   background-color: #ffbf00;
 }
 
-
-.signin, .signup{
+.signin,
+.signup {
   height: 100vh;
 }
+
 
 @media (max-width: 1370px) {
   .centered {
@@ -58,7 +58,8 @@
 }
 
 @media (orientation: portrait) {
-  .sign-in, .sign-up {
+  .sign-in,
+  .sign-up {
     width: 50%;
   }
 }
