--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
   transform: translate(-50%, -50%);
 }
 
-.Switch {
+/* .Switch {
   background-color: #2c3333;
   margin: auto;
   padding: 10px;
@@ -28,6 +28,17 @@
   padding: 2rem;
   margin-bottom: 1rem;
   color: white;
+} */
+
+.switchingComponent {
+  margin: auto;
+  /* width: 80%; */
+  /* border: 5px solid #ffbf00; */
+  /* border-radius: 20px; */
+  padding: 10px;
+  /* height: 60vh; */
+  padding: 2rem;
+  margin-bottom: 1rem;
 }
 
 .progressbar {
