add Admin route

--- a/src/components/admin/Admin.css
+++ b/src/components/admin/Admin.css
@@ -11,7 +11,7 @@
     --activeItem: #f799a354;
   }
   
-  .App {
+  .admin-main {
     /* padding: 0.5rem 3.5rem; */
     color: var(--black);
     /* background: linear-gradient(
